Screen recorder chat application/objects/Custom_support_Instruction__mdt.object
<CustomObject>
    <fields>
        <fullName>Capture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Radio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SearchBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SearchBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fieldName__c</fullName>
        <label>fieldName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom support Instruction</label>
    <pluralLabel>Custom support Instructions</pluralLabel>
</CustomObject>